# AI_FUNDAMENTALS

./: README.md  ai_coding_lab.html  ai_masterclass_visual_guide.html
AI_Fundamentals_Data_Domain-main/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
AI_Fundamentals_Data_Domain-main/CH-2_RAG/chroma_db/: chroma.sqlite3
AI_Fundamentals_Data_Domain-main/CH-4_Agent/chroma_db/: chroma.sqlite3
AI_Fundamentals_Data_Domain-main/CH-4_Agent/chroma_db_semantic/: chroma.sqlite3
