[project]
name = "ai-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.4",
    "aiosignal==1.4.0",
    "alabaster==0.7.16",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "arxiv==2.4.1",
    "asttokens==3.0.1",
    "attrs==26.1.0",
    "babel==2.18.0",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.3",
    "build==1.4.2",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "chromadb==1.5.5",
    "click==8.3.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cryptography==46.0.6",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "distro==1.9.0",
    "docutils==0.21.2",
    "dotenv==0.9.9",
    "durationpy==0.10",
    "executing==2.2.1",
    "feedparser==6.0.12",
    "filelock==3.25.2",
    "flatbuffers==25.12.19",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "fsspec==2026.3.0",
    "google-auth==2.49.1",
    "google-genai==1.69.0",
    "googleapis-common-protos==1.73.1",
    "greenlet==3.3.2",
    "grpcio==1.80.0",
    "h11==0.16.0",
    "hf-xet==1.4.2",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.8.0",
    "idna==3.11",
    "imagesize==2.0.0",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "iniconfig==2.3.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.13.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.5.0",
    "kubernetes==35.0.0",
    "langchain==1.2.14",
    "langchain-classic==1.0.3",
    "langchain-community==0.4.1",
    "langchain-core==1.2.23",
    "langchain-experimental>=0.4.1",
    "langchain-openai==1.1.12",
    "langchain-text-splitters==1.1.1",
    "langgraph==1.1.4",
    "langgraph-checkpoint==4.0.1",
    "langgraph-prebuilt==1.0.8",
    "langgraph-sdk==0.3.12",
    "langsmith==0.7.23",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mediawikiapi==1.3",
    "mmh3==5.2.1",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "numpy==2.4.4",
    "oauthlib==3.3.1",
    "onnxruntime==1.24.4",
    "openai==2.30.0",
    "opentelemetry-api==1.40.0",
    "opentelemetry-exporter-otlp-proto-common==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    "opentelemetry-proto==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-semantic-conventions==0.61b0",
    "orjson==3.11.7",
    "ormsgpack==1.12.2",
    "overrides==7.7.0",
    "packaging==26.0",
    "pandas==3.0.2",
    "parso==0.8.6",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.3",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "pypdf==6.9.2",
    "pypika==0.51.1",
    "pyproject-hooks==1.2.0",
    "pytest==9.0.2",
    "pytest-vcr==1.0.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "regex==2026.3.32",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.3.3",
    "rpds-py==0.30.0",
    "sgmllib3k==1.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "snowballstemmer==3.0.1",
    "soupsieve==2.8.3",
    "sphinx==7.4.7",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sqlalchemy==2.0.48",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "tokenizers==0.22.2",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uvicorn==0.42.0",
    "vcrpy==8.1.1",
    "watchfiles==1.1.1",
    "wcwidth==0.6.0",
    "websocket-client==1.9.0",
    "websockets==16.0",
    "wikipedia==1.4.0",
    "wrapt==2.1.2",
    "xxhash==3.6.0",
    "yarl==1.23.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]
